[gd_scene load_steps=2 format=3 uid="uid://bwpwtcxsy6eoi"]

[ext_resource type="Script" path="res://scenes/menus/main_menu.gd" id="1_37dxe"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_37dxe")

[node name="Black" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0, 0, 0, 1)

[node name="Contents" type="Node2D" parent="."]

[node name="mjkjr" type="Label" parent="Contents"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 234.0
offset_top = 1711.0
offset_right = 846.0
offset_bottom = 1810.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.139154
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 96
text = "an mjkjr game"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Contents"]
custom_minimum_size = Vector2(1080, 1920)
offset_right = 1080.0
offset_bottom = 1920.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBoxContainer3" type="VBoxContainer" parent="Contents/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 156

[node name="VBoxContainer2" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer3"]
layout_mode = 2
theme_override_constants/separation = -108

[node name="Title" type="Label" parent="Contents/MarginContainer/VBoxContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.3)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 8
theme_override_constants/outline_size = 36
theme_override_constants/shadow_outline_size = 54
theme_override_font_sizes/font_size = 144
text = "\"Pac Man\" Clone"
horizontal_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Contents/MarginContainer/VBoxContainer3"]
custom_minimum_size = Vector2(432, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 72

[node name="Play" type="Button" parent="Contents/MarginContainer/VBoxContainer3/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "Play"

[node name="HighScores" type="Button" parent="Contents/MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "High Scores"

[node name="Credits" type="Button" parent="Contents/MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Credits"

[node name="CheckButton" type="CheckButton" parent="Contents/MarginContainer/VBoxContainer3/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
button_pressed = true
text = "Sound "

[node name="Version" type="Label" parent="Contents/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "VERSION"
horizontal_alignment = 2

[node name="Audio" type="Node" parent="."]

[node name="Button" type="AudioStreamPlayer" parent="Audio"]

[connection signal="pressed" from="Contents/MarginContainer/VBoxContainer3/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Contents/MarginContainer/VBoxContainer3/VBoxContainer/HighScores" to="." method="_on_high_scores_pressed"]
[connection signal="pressed" from="Contents/MarginContainer/VBoxContainer3/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
